cabal-version:   2.0
name:            bzlib
version:         0.5.2.0
copyright:       (c) 2006-2015 Duncan Coutts
license:         BSD3
license-file:    LICENSE
author:          Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
category:        Codec
synopsis:        Compression and decompression in the bzip2 format
description:     This package provides a pure interface for compressing and 
                 decompressing streams of data represented as lazy 
                 'ByteString's. It uses the bz2 C library so it has high
                 performance.
                 .
                 It provides a convenient high level API suitable for most
                 tasks and for the few cases where more control is needed it
                 provides access to the full bzip2 feature set.
build-type:      Simple
extra-doc-files: CHANGELOG.md
extra-source-files:
  -- demo programs:
  examples/bzip2.hs examples/bunzip2.hs

flag system-bzlib
    description:
        Use system bzlib rather than the bundled sources

source-repository head
  type: darcs
  location: http://code.haskell.org/bzlib/

source-repository this
  type: git
  location: https://github.com/hackage-trustees/bzlib.git
  tag: 0.5.1.0

library
  default-language: Haskell2010
  exposed-modules: Codec.Compression.BZip,
                   Codec.Compression.BZip.Internal
  other-modules:   Codec.Compression.BZip.Stream
  default-extensions: CPP, ForeignFunctionInterface
  build-depends:   base >= 4.3 && < 4.20,
                   bytestring >= 0.9 && < 0.13

  if !impl(ghc >=8.0)
    build-depends: fail ==4.9.*

  includes:        bzlib.h
  ghc-options:     -Wall

  if flag(system-bzlib)
      extra-libraries: bz2
  else
      build-depends: bzlib-clib

